--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt-open": "~0.2.1",
     "grunt-concurrent": "~0.3.0",
     "grunt-gh-pages": "~0.6.0",
-    "connect-livereload": "~0.2.0"
+    "connect-livereload": "~0.2.0",
+    "socket.io": "*"
   },
   "engines": {
     "node": ">=0.8.0"
