--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "bespoke-remote-prototype-bespoke",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "~1.3.1"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.4.0",
