Use 'connect-injector' so bespoke-remote and LiveReload play nice

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "grunt-concurrent": "~0.3.0",
     "grunt-gh-pages": "~0.6.0",
     "connect-livereload": "~0.2.0",
-    "socket.io": "*"
+    "socket.io": "*",
+    "connect-injector": "~0.2.2"
   },
   "engines": {
     "node": ">=0.8.0"
