--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "grunt-gh-pages": "~0.6.0",
     "connect-livereload": "~0.2.0",
     "socket.io": "*",
-    "connect-injector": "~0.2.2"
+    "connect-injector": "~0.2.2",
+    "esprima": "~1.0.3",
+    "esquery": "~0.2.0",
+    "escodegen": "0.0.26"
   },
   "engines": {
     "node": ">=0.8.0"
