--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "grunt-gh-pages": "~0.6.0",
     "connect-livereload": "~0.2.0",
     "socket.io": "*",
-    "connect-injector": "~0.2.2",
+    "connect-assetmanager": "0.0.28",
     "esprima": "~1.0.3",
     "esquery": "~0.2.0",
     "escodegen": "0.0.26"
