Update boilerplate from generator-bespoke v0.4.1

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "bespoke.js": "~0.3.0",
     "bespoke-bullets": "~0.2.0",
+    "bespoke-scale": "~0.2.0",
     "bespoke-hash": "~0.1.0",
+    "bespoke-progress": "~0.1.0",
     "bespoke-state": "~0.2.0",
     "prism": "gh-pages"
   }
